Impressum and layout bugfixing

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: auto;
     height: 100%;
+    text-align: center;
 
     section{
         padding: 3rem;
@@ -26,7 +27,7 @@
         }
 
         figure{
-            margin-left: 0px;
+            margin: 1rem 0px 0px 0px;
         }
     }
 
@@ -67,20 +68,22 @@ ul{
 
 @media (min-width: 960px){
     .home{
+        text-align: left;
         grid-template-columns: 70% auto;
         grid-template-rows: 60% auto;
         grid-template-areas:
             "hero about"
             "hero contact";
-    }
 
-    section{
-        display: grid;
-        grid-template-rows: auto;
-        align-items: center;
-    }
-
-    section.hero{
-        grid-area: hero;
+        section{
+            display: grid;
+            grid-template-rows: auto;
+            align-items: center;
+            padding: 4rem;
+        }
+        
+        section.hero{
+            grid-area: hero;
+        }
     }
 }
