--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-a{
+.horizontalBar a{
     text-decoration: none;
     color: black;
 }
